Added a bit more.

--- a/trunk/TAO/TAO-INSTALL.html
+++ b/trunk/TAO/TAO-INSTALL.html
@@ -296,6 +296,9 @@ compiled. This can be accomplished in two ways: by defining ACE_HAS_EXCEPTIONS
 in the config.h or config-*.h files (such as on Windows) or by using 
 <CODE>make exceptions=1</CODE> when you compile TAO.</P>
 
+<P>Take note though, that this only enables support in ACE/TAO, the correct 
+compiler flags must also be given to the compiler to enable them.</P>
+
 <HR>
 <P>
 Back to the <A HREF="http://www.cs.wustl.edu/~schmidt/TAO.html">TAO</A> home page.
