for LynxOS, added link to platform_lynxos.GNU file, for usage information

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -387,6 +387,11 @@ make: *** [libACE.so] Error 8
       a problem with registering signal handlers.  So, some of the
       ACE tests seg fault when attempting to do that.<p>
 
+      Please see the comments in the
+      <a href="include/makeinclude/platform_lynxos.GNU">
+      ACE platform_lynxos.GNU file</a> for information on, and an
+      example of, tailoring for your particular platform.<p>
+
       We actively maintain ACE on LynxOS 3.0.0.  It should build and
       run on LynxOS 2.5, but we no longer test on that OS version.<p>
 
