--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -545,8 +545,8 @@ If you use the GNU GCC g++ compiler please note the following:
       application uses to your own code.  (The ACE libraries are
       self-contained:  you don't need to add the templates that
       they use internally.)  Examples of template specializations
-      occur in quite a few ACE .cpp files; see
-      apps/Gateway/Gateway/Proxy_Handler.cpp for one example.
+      occur in quite a few ACE .cpp files; see the end of
+      <A HREF="http://www.cs.wustl.edu/~schmidt/ACE_wrappers/apps/Gateway/Gateway/Connection_Handler.cpp">$ACE_ROOT/apps/Gateway/Gateway/Connection_Handler.cpp</A> for one example.
       An easy way to figure out what template instantiations are
       need is to try to build your executable and pipe the output
       through c++filt.  The linker will report the missing
