Added a link to Ossama's aceconf page.

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -1303,6 +1303,8 @@ in your PATH.<P>
 <UL>
   <LI><A
       HREF="docs/ACE-porting.html">Porting ACE and TAO to a New OS Platform</A>
+  <LI><A HREF="http://www.cs.wustl.edu/~othman/aceconf">Using GNU's
+      Autoconf with ACE</A>
   <LI><A HREF="#Non-static Object Manager">Non-static ACE_Object_Manager</A>
   <LI><A HREF="#cloning">Cloning the Source Tree</A>
   <LI><A HREF="#corba">Building CORBA Versions of ACE</A>
