--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -325,24 +325,20 @@ make: *** [libACE.so] Error 8
 
   <LI><B>OSF/1 3.2 and 4.0 (a.k.a. Digital UNIX 4.0)</B> <P>
 
-      The OSF/1 C++ 5.4 through 5.7 compilers have problems with ACE's
-      templates.  They compile the lib and most of the test programs,
-      although they warn about template usage.  Most tests run, some dump
-      core.<P>
+      The Digital UNIX C++ 5.4 through 5.7 compilers have problems
+      with ACE's templates.  They compile the lib and most of the test
+      programs, although they warn about template usage.  Most tests
+      run, some dump core.  If you use a 5.x version of cxx, be sure to
+      set the CXX_VER variable to CXX_5, either on your make command
+      line or in an environment variable.  The ACE Makefiles assume by
+      default that the cxx version is 6.x or later.<P>
 
-      CXX 6.0 and 6.1 are _much_ improved in this regard:  V6.0-020
-      and V6.1-025 and later build all of ACE cleanly.  Please note that
-      <code>include/makeinclude/platform_osf1_4.0.GNU</code> has a
-      <strong><code>WARNING_FLAGS</code></strong> macro that is disabled by
-      default, to support users who don't have 6.0 yet.  If you do, enable
-      that macro definition by either adding CXX_VER=POST_5X to your gmake
-      invocation, or editing your include/makeinclude/platform_macros.GNU
-      file.  All of the tests in ACE_wrappers/tests run successfully with
-      CXX 6.0 and CXX 6.1.<P>
-
-      Please note that problems have been reported with some
-      versions of CXX 6.1, notably versions -021 and earlier.
-      It's best to use V6.1-022 or later.<p>
+      CXX 6.0 and 6.1 are much improved over 5.x:  V6.0-020, V6.1-025,
+      and later build all of ACE cleanly.  All of the tests in
+      ACE_wrappers/tests run successfully with CXX 6.0 and CXX 6.1.
+      Please note that problems have been reported with some versions of
+      CXX 6.1, notably versions -021 and earlier.  It's best to use
+      V6.1-022 or later.<p>
 
       GNU gcc 2.7.2.1 compiles without problems. All tests run (besides
       minor problems).  Thanks to Thilo Kielmann &lt<A
