added Linux RedHat 5.2 mention

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -236,8 +236,8 @@ make: *** [libACE.so] Error 8
       ACE has been ported to <A
       HREF="http://www.cs.wustl.edu/~cleeland/ace/">Linux</A> on both Intel
       and Alpha platforms.  If you use a RedHat 5.x distribution, it's best
-      to use RedHat 5.1.  ACE will work without any modifications on
-      RedHat 5.1; use the
+      to use RedHat 5.1 or later.  ACE works without any modifications on
+      RedHat 5.1 and 5.2 on both Intel and Alpha; use the
       <code>include/makeinclude/platform_linux_lxpthreads.GNU</code>
       and <code>ace/config_linux_lxpthreads.h</code> platform/config
       files.<p>
