--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -242,8 +242,8 @@ make: *** [libACE.so] Error 8
       and <code>ace/config_linux_lxpthreads.h</code> platform/config
       files.<p>
                                                                                      The ACE <code>Tokens_Test</code> hangs with egcs 1.1b on
-      Linux.  It runs properly when built with egcs 1.0.2.  All
-      other ACE tests run properly with both egcs versions.<p>
+      Linux.  It runs properly when built with egcs 1.0.2 and egcs
+      1.0.3.  All other ACE tests run properly with both egcs versions.<p>
 
       <strong>NOTE:</strong> The TAO NameService uses IP multicasting
       by default, though it is not required.  IP multicast on Linux
@@ -511,7 +511,8 @@ If you use the GNU GCC g++ compiler please note the following:
       and comment out the <code>OCFLAGS</code> line.<P>
 
   <li>ACE/TAO don't seem to build well with g++ 2.8.1.  We routinely
-      use g++ 2.7.2.3 and egcs 1.0.2, and recommend those versions.<p>
+      use g++ 2.7.2.3, egcs 1.0.2, and egcs 1.0.3, and recommend those
+      versions.  egcs 1.1.1 is reported to be OK, as well.<p>
 
   <LI>Earlier (prior to 2.7.2) versions of g++ may not compile
       certain parts of ACE correctly due to compiler bugs.  Please
