--- a/trunk/TAO/TAO-INSTALL.html
+++ b/trunk/TAO/TAO-INSTALL.html
@@ -47,15 +47,16 @@ likely unpredictable and erroneous results. <P>
   <LI>Build and install the TAO release under <CODE>$TAO_ROOT</CODE>.<P>
 
       <UL>
-        <LI>Change directory to <CODE>$TAO_ROOT/tao</CODE> and
-            execute <code><a href="#makenotes">make</a></code>.<P></li>
+        <LI>Change directory to <CODE>$TAO_ROOT/</CODE> and
+            execute <code><a href="#makenotes">make</a></code>.
+            This will build the TAO run-time library, the
+            TAO IDL compiler, the TAO CORBA Object Services,
+            the examples, and test programs. <P></li>
       </UL>
 
-  <LI>Change directory to <CODE>$TAO_ROOT/tests</CODE> and
-      execute <CODE><A HREF="#makenotes">make</A></CODE>. <P>
-
-  <LI>Follow instructions on executing the various examples under
-      <CODE>$TAO_ROOT/tests</CODE>.<P>
+  <LI>To test that the TAO release is properly configured, follow
+      instructions on executing the various examples under
+      <CODE>$TAO_ROOT/tests</CODE>.<P> 
 
 </OL>
 
