*** empty log message ***

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -21,8 +21,9 @@ Services on the various OS platforms and compilers that it has been
 ported to.  Please consult the <A HREF="ChangeLog">ChangeLog</A> file
 to see whether any recent changes to the release will affect your
 code.  You also might want to read the ACE <A
-HREF="ACE.FAQ.html">FAQ</A> before building and installing ACE.  In
-addition, you might want to check out our <A
+HREF="http://www.cs.wustl.edu/~schmidt/ACE.FAQ.html">FAQ</A> before
+building and installing ACE.  In addition, you might want to check out
+our <A
 HREF="http://www.cs.wustl.edu/~schmidt/ACE-development4.ps.gz">development
 process</A>, as well.<P>
 
