--- a/TAO/TAO-INSTALL.html
+++ b/TAO/TAO-INSTALL.html
@@ -69,9 +69,9 @@ try to help you fix the problems.<P>
 TAO can be obtained <A
 HREF="https://download.dre.vanderbilt.edu">electronically</A>
 via the WWW and ftp.  <A
-HREF="https://www.dre.vanderbilt.edu/TAO">TAO</A> is bundled
+HREF="https://www.cs.wm.edu/~dcschmidt/TAO.html">TAO</A> is bundled
 with the <A
-HREF="https://www.dre.vanderbilt.edu/ACE"> ACE </A> release.  You'll
+HREF="https://www.cs.wm.edu/~dcschmidt/ACE.html"> ACE </A> release.  You'll
 always need the most recent version of ACE because TAO tracks and
 influences changes to ACE.  Always use the ACE+TAO release
 bundle as a single piece instead of trying to mix and match things up.<P>
