--- a/ACE/html/Stats/img.html
+++ b/ACE/html/Stats/img.html
@@ -2,7 +2,7 @@
  <CENTER>
 <TABLE cellpadding=10 cellspacing=10 border=10>
   <TD>
-  <A HREF="https://www.dre.vanderbilt.edu/ACE">
+  <A HREF="https://www.cs.wm.edu/~dcschmidt/ACE.html">
   <IMG SRC="/image/ACE.jpg"  width="150" height="125"></A>
   </TD>
 
@@ -15,7 +15,7 @@
   <IMG SRC="https://www.remedy.nl/assets/img/logo_large.png" width="164" height="106"></A>
   </TD>
   <TD>
-  <A HREF="https://www.dre.vanderbilt.edu/TAO">
+  <A HREF="https://www.cs.wm.edu/~dcschmidt/TAO.html">
   <IMG SRC="/image/TAO.jpg" width="150" height="125"></A>
   </TD>
 </TABLE>
