--- a/ACE/etc/index.html
+++ b/ACE/etc/index.html
@@ -30,6 +30,7 @@
     <hr>
     We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="8.0.5/html">8.0.5</A></P></LI>
       <LI><P><A HREF="8.0.4/html">8.0.4</A></P></LI>
       <LI><P><A HREF="8.0.3/html">8.0.3</A></P></LI>
       <LI><P><A HREF="8.0.2/html">8.0.2</A></P></LI>
